fix(board): overflow and text styling (#1504)
* fix(tavla): add support for line through on chromium 56

* fix(tavla): add truncate to destination text

--- a/next-tavla/app/globals.css
+++ b/next-tavla/app/globals.css
@@ -210,4 +210,8 @@
             margin: 0.75em;
         }
     }
+
+    .lineThrough {
+        text-decoration: line-through;
+    }
 }
